--- a/src/ProjectRoadmap/ProjectRoadmap.html
+++ b/src/ProjectRoadmap/ProjectRoadmap.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-
+<head>
+    <title>Roadmaps</title>
+</head>
 <body>
     <div id="root"></div>
     <script type="text/javascript" src="ProjectRoadmap.js" charset="utf-8"></script>
